# eta-otp-lock

./: .gitignore  MainWindow.py  main.ui  main.ui~  meson.build  update-translations.sh
data/: tr.org.etap.otp-settings.desktop  tr.org.etap.otp-settings.policy
debian/: changelog  control  copyright
pam/: pam-auth-update  pam_otp.py
po/: LINGUAS  eta-otp-lock.pot  pt.po  tr.po
src/: MainWindow.py  actions.py  gui.py  main.py  main.ui~  otp.py  utils.py
src/ui/: MainWindow.ui  MainWindow.ui~
ui/: main.ui
